# apps/api/src/projects/dto/my-project-summary-response.dto.ts
@@ -1,0 +1,6 @@
+import { createZodDto } from 'nestjs-zod';
+import { myProjectSummaryResponseSchema } from '@gitiempo/shared';
+
+export class MyProjectSummaryResponseDto extends createZodDto(
+  myProjectSummaryResponseSchema,
+) {}
